# ATLAS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION.md  MANIFEST.in  README.md  RELEASING.md  SKILL.md  mkdocs.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  docs.yml  release.yml
ATLAS_as_a_Judge/: CAUSAL_HANDBOOK.md  README.md  __init__.py  a1_nodes.py  a2_edges.py  component_b.py  llm_agent.py  models.py  prompts.py  splitter.py
ATLAS_as_a_Judge/assets/: a1_backward.md  a1_cross.md  a1_forward.md  a1_merge.md  a2_edges.md  component_b.md
ATLAS_as_a_Judge/tests/: test_a1_nodes.py  test_a2_edges.py  test_component_b.py
AdaMAST_as_a_Judge/: README.md
adamast_integration/: README.md  shared.py
adamast_integration/claude_code/: README.md  browser_picker.py  config.py  custom.py  dispatcher.py  install.py  learning_jobs.py  native_worker.py  prompts.py  reflection.py  runtime.py  session_routes.py  state.py  subagent_protocol.py  transcript.py  uninstall.py
adamast_integration/codex/: README.md  browser_picker.py  config.py  dispatcher.py  install.py  learning_jobs.py  native_worker.py  prompts.py  runtime.py  selector.py  session_routes.py  state.py  subagent_protocol.py  transcript.py  uninstall.py
adamast_integration/interactive/: README.md  browser_picker.py  defaults.py  learning_jobs.py  selector.py  session_routes.py  subagent_protocol.py  worker_contract.py
adamast_integration/single_llm/: README.md  cli.py  runtime.py
adamast_runtime/: README.md  __init__.py  checkpoint_prompt.py  dashboard.py  doctor.py  evidence.py  generation.py  import_generation.py  learning_calls.py  lifecycle.py  models.py  program.py  protocol.py  refinement.py  reflection.py  reflection_refinement.py  register_taxonomy.py  status.py  taxonomy_data.py
atlas/: __init__.py  __main__.py  api.py  classifier.py  cli.py  llm.py
atlas/pipeline/: __init__.py  check.py  dedup.py  domain.py  generator.py  pipeline.py  structure.py  validate.py
atlas/traces/: __init__.py  loader.py  normalizer.py  signals.py
atlas_integration/: README.md  __init__.py  shared.py
atlas_integration/claude_code/: README.md  __init__.py  browser_picker.py  config.py  custom.py  dispatcher.py  install.py  learning_jobs.py  manage_hooks.py  native_worker.py  prompts.py  reflection.py  runtime.py  session_routes.py  state.py  subagent_protocol.py  transcript.py  uninstall.py
atlas_integration/codex/: README.md  __init__.py  browser_picker.py  config.py  dispatcher.py  install.py  learning_jobs.py  native_worker.py  prompts.py  runtime.py  selector.py  session_routes.py  state.py  subagent_protocol.py  transcript.py  uninstall.py
atlas_integration/interactive/: README.md  __init__.py  browser_picker.py  defaults.py  learning_jobs.py  selector.py  session_routes.py  subagent_protocol.py  worker_contract.py
atlas_integration/single_llm/: README.md  __init__.py  cli.py  runtime.py
atlas_runtime/: README.md  __init__.py  checkpoint_prompt.py  config.py  dashboard.py  doctor.py  evidence.py  evidence_export.py  generation.py  import_generation.py  learning_calls.py  lifecycle.py  lineage.py  models.py  options.py  program.py  project_scope.py  protocol.py  refinement.py  reflection.py  reflection_refinement.py  register_taxonomy.py  status.py  taxonomy_check.py  taxonomy_data.py  traces.py  traces_cli.py  worker_state.py
atlas_runtime/assets/: atlas_config.schema.json  checkpoint_reflection.md  dashboard.html  format_repair.md  pre_submission_protocol.md  reflection_refiner_system.md  reflection_refiner_user.md  standard_refinement_prompt.md
claude_code_skill/: README.md  SKILL.md  __init__.py  accumulator.py  config.toml  induction.py  mast_floor.md  refinement.py  render.py  runtime.py  seed_adapter.py
claude_code_skill/hooks/: post_tool_use.py  stop.py
claude_code_skill/installer/: install.sh  uninstall.sh
claude_code_skill/templates/: protocol.md
docs/: API_OR_RUNTIME.md  ARCHITECTURE.md  CLAUDE_CODE.md  CODEX.md  COMPATIBILITY.md  CONCEPTS.md  CONFIGURATION.md  CUSTOMIZATION.md  DASHBOARD.md  EXAMPLE_RUN.md  GETTING_STARTED.md  INSTALLATION.md  INTEGRATION.md  INTERACTIVE_CONVERSATIONS_RFC.md  INTERACTIVE_SETUP.md  NATIVE_LEARNING.md  README.md  SINGLE_LLM.md  TAXONOMIES.md  TRACES_AND_LEARNING.md  TROUBLESHOOTING.md  WEB_API.md  index.html  index.md
examples/: README.md  __init__.py  basic_usage.py  classify_example.py  dashboard_demo.py  manual_vendored_generation.py  programmatic_usage.py  sample_taxonomy.json  sample_traces.jsonl
examples/mast_data_taxonomies/: AG2_GSMPlus.json  AG2_MMLU.json  AG2_OlympiadBench.json  README.md  (+6 more)
finding/: README.md  __init__.py  cli.py  mast.py  resolver.py  store.py  webview.py
judge_types/: README.md  __init__.py  calibration_judge.py  coverage_judge.py  mapping_judge.py  quality_judge.py  selection_judge.py  selection_summary_judge.py  simple.py
officeqa/: .gitignore  README.md  cc_proxy.py  run_officeqa_atlas.py
runs/: README.md
taxonomies/: tax-django-orm-001.json  tax-flask-routing-004.json  tax-numpy-array-003.json  tax-placeholder-aaa-005.json  tax-placeholder-bbb-006.json  tax-requests-http-002.json
tests/: README.md  __init__.py  test_adapter_contracts.py  test_claude_code_integration.py  test_claude_native_learning.py  test_cli.py  test_codex_integration.py  test_codex_learning_jobs.py  test_config.py  test_conversation_scope.py  test_custom_hooks.py  test_dashboard.py  test_doctor.py  test_fsio.py  test_generation_lifecycle.py  test_import_generation.py  test_judge_implementations.py  test_judge_types.py  test_learning_calls.py  test_lifecycle.py  test_loader.py  test_mast.py  test_normalizer.py  test_officeqa_runner.py  test_pipeline_e2e_placeholder.py  test_project_scope.py  test_protocol.py  test_redaction.py  test_refinement_lifecycle.py  test_refiner_no_retire.py  test_reflection_parser.py  test_register_taxonomy.py  test_repository.py  test_resolver.py  test_runtime_options.py  test_runtime_robustness.py  test_signals.py  test_single_llm_integration.py  test_skip_judge.py  test_status.py  (+9 more)
(+37 files in other folders)
