[build-system]
# setuptools>=77 + a modern pip is required to read PEP 621 metadata. Old
# Ubuntu pip (22.0.2 on Ubuntu 22.04) sometimes ignores the [project] table
# entirely and silently builds a wheel named UNKNOWN-0.0.0; the floor here
# is intentionally higher than strictly needed so build-isolation envs end
# up fetching a setuptools recent enough to behave. See README installation
# troubleshooting if you still hit the UNKNOWN-wheel symptom.
requires = ["setuptools>=77", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "adamast"
version = "0.1.0"
description = "Adaptive failure-mode taxonomy runtime for Codex, Claude Code, and custom agent harnesses."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "AdaMAST authors" }]
keywords = ["agents", "failure-taxonomy", "codex", "claude-code", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["openai>=1.40"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
bedrock = ["boto3>=1.43"]
test = ["pytest>=7", "pytest-cov>=5", "ruff>=0.12,<1"]
docs = ["mkdocs-material>=9.5"]

[project.scripts]
adamast-find = "finding.cli:main"
adamast-dashboard = "adamast_runtime.dashboard:main"
adamast-import-traces = "adamast_runtime.import_generation:main"
adamast-register-taxonomy = "adamast_runtime.register_taxonomy:main"
adamast-doctor = "adamast_runtime.doctor:main"
adamast-traces = "adamast_runtime.traces_cli:main"
adamast-status = "adamast_runtime.status:main"
adamast-claude-install = "adamast_integration.claude_code.install:main"
adamast-claude-uninstall = "adamast_integration.claude_code.uninstall:main"
adamast-claude-add-hook = "adamast_integration.claude_code.manage_hooks:add_main"
adamast-claude-remove-hook = "adamast_integration.claude_code.manage_hooks:remove_main"
adamast-claude-list-hooks = "adamast_integration.claude_code.manage_hooks:list_main"
adamast-codex-install = "adamast_integration.codex.install:main"
adamast-codex-uninstall = "adamast_integration.codex.uninstall:main"
adamast-single-run = "adamast_integration.single_llm.cli:main"

[project.urls]
Homepage = "https://github.com/multi-agent-systems-failure-taxonomy/ATLAS"
Documentation = "https://multi-agent-systems-failure-taxonomy.github.io/ATLAS/"
Repository = "https://github.com/multi-agent-systems-failure-taxonomy/ATLAS"
Issues = "https://github.com/multi-agent-systems-failure-taxonomy/ATLAS/issues"
Paper = "https://github.com/multi-agent-systems-failure-taxonomy/ATLAS/blob/main/docs/adamast_paper.pdf"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "adamast_runtime*",
  "adamast_integration*",
  "finding*",
  "judge_types*",
  "vendor*",
]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
finding = ["mast.json", "assets/*.html"]
adamast_runtime = ["assets/*.md", "assets/*.html", "assets/*.json"]
"adamast_integration.claude_code" = ["assets/*.md", "assets/*.json"]
"adamast_integration.codex" = ["assets/*.md", "assets/*.yaml"]
"adamast_integration.single_llm" = ["assets/*.md"]
judge_types = ["assets/*/*.md"]
"judge_types.reflection_judge" = ["assets/*.md", "assets/*.json"]
vendor = ["adamast/LICENSE", "adamast/VENDORED.md"]
"vendor.adamast" = ["assets/*.md"]
"vendor.adamast.pipeline" = ["assets/*.md", "assets/*.json"]

[tool.setuptools.data-files]
"share/adamast" = ["SKILL.md"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["vendor"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"adamast_runtime/__init__.py" = ["E402"]
